--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">AboutMe</string>
     <string name="name">Carli</string>
+    <string name="Yellow_star">Yellow Star</string>
 </resources>
