--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
 \n\nVivamus id maximus magna, ac mollis odio. Ut ut lacinia sapien. Sed blandit hendrerit libero, ut fringilla diam eleifend tincidunt. Mauris in nibh a justo hendrerit feugiat. Vestibulum a quam non leo elementum pretium. Donec fermentum sollicitudin volutpat. Mauris ut erat eu est aliquam cursus et et mi. Aliquam erat volutpat. Integer convallis ante quis elit rutrum fringilla.
 \n\nNulla facilisi. Etiam accumsan, tortor vitae euismod finibus, justo ligula ultrices ante, vehicula condimentum arcu nunc vel justo. Cras blandit felis massa, quis iaculis dolor luctus id. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus vitae nulla ac ex pellentesque aliquam. In ultrices consectetur volutpat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis ultrices augue sit amet dui elementum, nec malesuada odio porttitor. Integer quis sodales libero.</string>
     <string name="scroll_init_image">Init Scroll</string>
+    <string name="nickname_hint">What is your Nickname?</string>
 </resources>
